--- a/sn-article.tex
+++ b/sn-article.tex
@@ -322,7 +322,7 @@ Blinding information can be found either in the methods section or the abstract.
 \subsection*{Signalling question - 2.2}
 \label{subsec:2_2}
 %
-While the previous signalling question assessed participant blinding, this question, ``Were the carers and people delivering the interventions aware of the participants' assigned intervention during the trial?'' evaluates whether the carers and individuals administering the interventions were aware of the participants' assigned interventions during the trial.
+While the previous signalling question assessed participant blinding, this SQ, ``Were the carers and people delivering the interventions aware of the participants' assigned intervention during the trial?'' evaluates whether the carers and individuals administering the interventions were aware of the participants' assigned interventions during the trial.
 If carers and treatment administrators are not blinded, them being aware of the assigned interventions could influence their behaviour, interactions with participants, and delivery of the interventions.
 This can potentially introduce bias and alter the study outcomes~\cite{hrobjartsson2011blinding}.
 
@@ -340,21 +340,17 @@ This can potentially introduce bias and alter the study outcomes~\cite{hrobjarts
 %
 %
 
-
-Follow the Flowchart~\ref{fig:2_2} for annotation instructions of the signalling question, ``Were the carers and people delivering the interventions aware of the participants' assigned intervention during the trial?''.
-Following the above explanation, the first diamond instructs the annotators to find sentences describing the administration procedure for intervention under investigation and placebo. 
-If found, annotate both parts of text, the part where intervention administration is described and the part where proper carer and administrator blinding via a placebo or sham is described.
-If you judge the sham as a good sham procedure then label these text parts with ``2.2 No Good''.
-For example, ``This RCT used a 5-week, double-blind, parallel groups design'', ``Treatment was administered by an RA who was blinded to assessment results and study hypotheses''\cite{chiaravalloti2020efficacy}.
-If such sentences are not found, then follow the connector line ``No'' to the next diamond requesting the annotators to look for sentences that mention or clearly imply that the carers and administrators could not distinguish between the intervention or placebo or maybe if the title and abstract of the study was described as ``single blind'', ``double blind'',  or ``placebo-controlled'', then mark such sentences or phrases and label them as ``2.2 No Information''. 
-If no proper carer blinding was described or if it was explicitly mentioned that carer blinding was not possible, then the sentences identified using the first diamond should be marked with the label ``2.2 Yes Bad''.
-For example, ``...we wanted to evaluate the commonly used methods that often involve parents’ actions, and blinding of parents to participants, care providers, or assessors was not possible due to the nature of the intervention''~\cite{andersson2020effect}.
-
 % TODO: Fix this by mixing with above text...
 To provide clearer guidance, please follow Flowchart~\ref{fig:2_2} for annotation instructions related to the signaling question, "Were the carers and people delivering the interventions aware of the participants' assigned intervention during the trial?"
-In the explanation above, the first diamond directs annotators to search for sentences that describe the procedure for administering the intervention under investigation and the placebo. If such sentences are found, the annotators should annotate both parts of the text: the section describing intervention administration and the section explaining how carers and administrators were blinded using a placebo or sham. If the sham is considered a good blinding procedure, label these text portions with "2.2 No Good." For instance, consider the sentences, "This RCT used a 5-week, double-blind, parallel groups design" and "Treatment was administered by an RA who was blinded to assessment results and study hypotheses"~\cite{chiaravalloti2020efficacy}.
-If sentences of this nature are not found, proceed to the connecting line labeled "No" and move to the next diamond. In this diamond, annotators are instructed to search for sentences that either explicitly state or strongly imply that the carers and administrators could not differentiate between the intervention and placebo. Additionally, check if the study's title or abstract mentions terms like "single blind," "double blind," or "placebo-controlled." Mark such sentences or phrases and label them as "2.2 No Information."
-In cases where proper carer blinding was not described or it is explicitly mentioned that carer blinding was not possible, the sentences identified using the first diamond should be marked with the label "2.2 Yes Bad." An example of this is, "...we wanted to evaluate the commonly used methods that often involve parents' actions, and blinding of parents to participants, care providers, or assessors was not possible due to the nature of the intervention"~\cite{andersson2020effect}.
+In the explanation above, the first diamond directs annotators to search for sentences that describe the procedure for administering the intervention under investigation and the placebo.
+If such sentences are found, the annotators should annotate both parts of the text: the section describing intervention administration and the section explaining how carers and administrators were blinded using a placebo or sham.
+If the sham is considered a good blinding procedure, label these text parts with ``2.2 No Good''.
+For example, \cite{chiaravalloti2020efficacy} describes intervention administration as ``This RCT used a 5-week, double-blind, parallel groups design'', and carer blinding as  ``Treatment was administered by an RA who was blinded to assessment results and study hypotheses''.
+If sentences of this nature are not found, go to the connecting line indicating ``No'' and move to the next diamond.
+In this diamond, annotators are instructed to search for sentences that either explicitly state or strongly imply that the carers and administrators could not differentiate between the intervention and placebo. Additionally, check if the study's title or abstract mentions terms like ``single blind'', ``double blind'', or ``placebo-controlled''.
+Mark such sentences or phrases and label them as ``2.2 No Information''.
+In cases where proper carer blinding was not described or it is explicitly mentioned that carer blinding was not possible, the sentences identified using the first diamond should be marked with the label ``2.2 Yes Bad''.
+An example of this is, ``...we wanted to evaluate the commonly used methods that often involve parents' actions, and blinding of parents to participants, care providers, or assessors was not possible due to the nature of the intervention''~\cite{andersson2020effect}.
 
 
 
@@ -364,10 +360,9 @@ In cases where proper carer blinding was not described or it is explicitly menti
 \subsection*{Signalling question - 2.3}
 \label{subsec:2_3}
 %
-This signalling question 2.3, ``Were there deviations from the intended intervention that arose because of the trial context?'' aims to assess the risk of bias associated with deviations from the intended intervention in a study.
-It seeks to determine whether any deviations occurred during the trial due to factors related to the trial context.
+This signalling question 2.3, ``Were there deviations from the intended intervention that arose because of the trial context?'' aims to assess whether any deviations that occurred during the trial were due to factors related to the trial context.
 The intended intervention refers to the specific treatment or intervention that is planned to be delivered to participants.
-Deviations from the intended intervention can occur for various reasons, such as practical challenges, implementation issues, or unforeseen circumstances within the trial context~\cite{paterson2019feasibility}.
+Deviations from the intended intervention can occur for various reasons, such as practical challenges, implementation issues, or unexpected circumstances within the trial context~\cite{paterson2019feasibility}.
 This question focuses on assessing whether these deviations from the intended intervention were due to factors directly related to the trial rather than factors outside the trial.
 It helps evaluate the extent to which the trial protocol was followed and whether the trial results could have been influenced by these deviations.
 
@@ -384,13 +379,13 @@ It helps evaluate the extent to which the trial protocol was followed and whethe
 %
 %
 
-Follow the Flowchart~\ref{fig:2_3} for annotation instructions of the signalling question, ``Were there deviations from the intended intervention that arose because of the trial context?''.
+Follow the Flowchart~\ref{fig:2_3} for annotation instructions for this SQ.
 In the flowchart, the first diamond prompts annotators to search for information regarding the number of deviations from the intended intervention.
-It clarifies that these deviations are not related to the dropout rate in the trial.
+%It clarifies that these deviations are not related to the dropout rate in the trial.
 If no percentage or absolute number of deviations is identified in the text, no annotation is necessary, and the document will be automatically marked as ``2.3 No Information'' for this signalling question, following the  ``No'' arrow.
 If the percentage of deviations is identified, annotators should annotate the full sentence where this information is found.
 %For example, during the course of a trial, a certain number of patients could deviate from their assigned intervention or failed to adhere to the prescribed treatment due to various reasons such as lack of improvement, side effects, or personal preference.
-They should then proceed to the next diamond in the flowchart, following the ``yes'' flow, and assess whether these deviations occurred due to the trial context.
+They should then proceed to the next diamond in the flowchart, following the ``yes'' flow, and the next diamond instructs the annotator to assess whether these deviations occurred due to the trial context.
 If the deviations are determined to be due to the trial context, the annotated sentence(s) should be marked as ``2.3 Yes Bad''.
 If the deviations are not attributed to the trial context, they should be marked as ``2.3 No Good''.
 For example, ``Two patients in the control group receiving physiotherapy (usual care) erroneously attended the PT-led education and exercise programme after...''~\cite{osteraas2019implementing}. % Anjani: requires fact-checking if this is 2.3 Yes Bad or No Good
@@ -400,8 +395,7 @@ This second annotation allows for capturing additional information.
 This information can be found in the text of the Results section, specifically within the allocation or recruitment paragraphs (indicated by the green-coded arrow on the diamonds).
 Only if the information is not found in the Results section, should the annotators check the flowcharts or their captions for any relevant details.
 The judgment regarding the trial context and deviations can be subjective, and it is left to the reviewers' discretion once they have access to the deviation information.
-However, at least the annotators will have the annotated information about the percentage/number of deviations which could be used to train the machine learning models.
-Ultimately, the review of deviations and trial context is subjective, but the annotated information can be used to train machine learning models.
+Ultimately, the review of deviations and trial context is subjective, but the annotated information (percentage or number of deviations) can be used to train machine learning models.
 %
 %
 %
